--- a/8-module/4-task/index.html
+++ b/8-module/4-task/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="">
 
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Бангкок Экспресс: Корзина</title>
 
+  <link rel="stylesheet" href="/assets/styles/button.css" />
   <link rel="stylesheet" href="/assets/styles/common.css" />
   <link rel="stylesheet" href="./index.css">
   <link rel="stylesheet" href="../1-task/index.css" />
